--- a/Proyecto_VLadron_MMLopez.ipynb
+++ b/Proyecto_VLadron_MMLopez.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "\n",
     "### 1.1 COVID-19\n",
-    "> En este proyecto se busca simular el comportamiento de Covid-19. Se busca comparar diferentes países para observar la relación de casos-muertes y la disminución de nuevos casos con las vacunas aplicadas.\n",
+    "> En este proyecto se busca simular el comportamiento de Covid-19. Se busca comparar diferentes países para observar la relación de casos-muertes y la disminución de nuevos casos conforme las vacunas aplicadas.\n",
     "\n",
     "### 1.2 Objetivos.\n",
     "> - Se refieren a los propósitos por los cuales se hace el trabajo.\n",
@@ -58,7 +58,7 @@
     "> Se debe describir en una cuartilla máximo cuál es el escenario de negocio que se va a modelar, identificar cuáles son los supuestos que defines en el negocio y cuáles son los \"nodos\" o \"escenarios\" que identificas necesarios simular y porqué. Debes elaborar un diagrama de inicio a fin, identificando los \"nodos\" o \"escenarios\" a simular.\n",
     "\n",
     "### 1.4 Nodos y variables que se decidieron simular y porqué\n",
-    "Los nodos que se analizarán serán los cuatro diferentes países y en cada uno se va analizar la comparación de casos y muertes, asi como la dismminución de nuevos casos respecto con las vacunas. \n",
+    "Los nodos que se analizarán serán los cuatro diferentes países y en cada uno se va analizar la comparación de casos y muertes, asi como la dismminución de nuevos casos respecto con las vacunas. De esta manera se observará el porcentaje de disminución de casos y muertes dentro de n tiempo comparando los cuatro países.\n",
     "\n",
     "### 1.5 Definición de hipótesis y supuestos.\n",
     ">  Para poder modelar un proceso de negocio o cualquiera otro proceso en el área de las ingenierías o ciencias sociales, después de identificar el objeto de estudio, es importante indicar cuales son los supuestos que se dan por verdaderos a lo largo de la ejecución del proceso. Estos supuestos se deben indicar en forma de variables e hipótesis (son diferentes), porque si puedes definir en un valor el supuesto lo llamaremos \"supuesto constante\" y si no es posible identificarlo con un número entonces será una hipótesis que afectará la construcción de los escenarios posibles del proceso.\n",
