--- a/Proyecto_VLadron_MMLopez.ipynb
+++ b/Proyecto_VLadron_MMLopez.ipynb
@@ -41,15 +41,13 @@
     "> En este proyecto se busca simular el comportamiento de Covid-19. Se busca comparar diferentes países para observar la relación de casos-muertes y la disminución de nuevos casos conforme las vacunas aplicadas.\n",
     "\n",
     "### 1.2 Objetivos.\n",
-    "> - Se refieren a los propósitos por los cuales se hace el trabajo.\n",
-    "> - Deben ser **concretos, evaluables y verificables.**\n",
-    "> - Deben ser escritos en infinitivo.\n",
+    "\n",
     "> #### 1.1 Objetivo general.\n",
-    ">  - Fin último de estudio. Se formula atendiendo el propósito global del trabajo. No presenta detalles.\n",
-    ">  - Se orienta a la totalidad del trabajo. Tiene que ver con el título del trabajo.\n",
+    "> Simular el comportamiento de covid México observando mejoras con vacunas en comparación a los otros países.\n",
     "> #### 1.2 Objetivos específicos\n",
-    ">  - De forma detallada describen cada una de los componentes del trabajo.\n",
-    ">  - En conjunto garantizan la consecución del objetivo general.\n",
+    "* \n",
+    "*\n",
+    "*\n",
     "\n",
     "Referencia:\n",
     "- https://es.slideshare.net/rosbur/metodologia-objetivos-generales-y-especficos\n",
@@ -61,7 +59,10 @@
     "Los nodos que se analizarán serán los cuatro diferentes países y en cada uno se va analizar la comparación de casos y muertes, asi como la dismminución de nuevos casos respecto con las vacunas. De esta manera se observará el porcentaje de disminución de casos y muertes dentro de n tiempo comparando los cuatro países.\n",
     "\n",
     "### 1.5 Definición de hipótesis y supuestos.\n",
-    ">  Para poder modelar un proceso de negocio o cualquiera otro proceso en el área de las ingenierías o ciencias sociales, después de identificar el objeto de estudio, es importante indicar cuales son los supuestos que se dan por verdaderos a lo largo de la ejecución del proceso. Estos supuestos se deben indicar en forma de variables e hipótesis (son diferentes), porque si puedes definir en un valor el supuesto lo llamaremos \"supuesto constante\" y si no es posible identificarlo con un número entonces será una hipótesis que afectará la construcción de los escenarios posibles del proceso.\n",
+    "**Hipótesis**\n",
+    "* México tendra menos casos en el último mes, debido a la mayor cantidad de vacunas.\n",
+    "* Entre más vacunas aplicadas exista en el país, menor serán los nuevos casos.\n",
+    "* Argentina \n",
     "\n",
     "### 1.6 Obtención de bases de datos\n",
     "https://ourworldindata.org/coronavirus\n",
